[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Sewar-web <s.maqableh@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.4"
jupyterlab = "^3.0.16"
sklearn = "^0.0"
matplotlip = "^0.2"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
